--- a/scss/main.scss
+++ b/scss/main.scss
@@ -10,5 +10,5 @@
 @use 'sinopse/fundo-sinopse.scss';
 @use 'sinopse/sinopse.scss';
 @use 'mundo/fundo-mundo-mapa.scss';
-@use 'mundo/mapa.scss';
+@use 'mundo/mundo.scss';
 @use 'mundo/locais.scss';
