--- a/css/main.css
+++ b/css/main.css
@@ -388,6 +388,7 @@ header .head .menu .menu-lista .menu-links a {
   margin: auto;
   width: 120px;
   padding: 0px;
+  z-index: 1000;
 }
 .container-lista .lista-principal li .sublista li {
   text-align: left;
