--- a/scss/mundo/mundo.scss
+++ b/scss/mundo/mundo.scss
@@ -64,6 +64,7 @@
             margin: auto;
             width: 120px;
             padding: 0px;
+            z-index: 1000;
             
                 li{
                     text-align: left;
@@ -72,6 +73,7 @@
                     list-style: none;
                     color: black;
                     align-content: space-around;
+                    
                 a{  
                     text-decoration: none;
                     color: white;
