--- a/scss/mundo/mundo.scss
+++ b/scss/mundo/mundo.scss
@@ -3,20 +3,17 @@
     max-width: 1000px;
     margin: 10px auto;
     padding: 16px;
-    color: #F1D94F;
+    color: #E3B37F;
     font-family: Raleway,Arial, Helvetica, sans-serif;
-    h1,h4,h3{
+    h1,h2,h3,h4,h5,h6{
         color: white;
+        
     }
-    h2{
-        text-align: center;
-        padding: 10px;
-        color: white;
+    h1,h2{
+        border-bottom:1px solid rgba(255, 255, 255, 0.356) ;
+        padding-bottom: 5px;
     }
-    h3{
-        padding: 5px;
-        color: white;
-    }
+    
     
     .mapa{
         text-align: center;
@@ -24,6 +21,24 @@
         img{
             width: 60%;
         }
+    }
+    section{
+        padding: 50px;
+        .artigo{
+            padding: 5px;
+
+            h4{
+                
+                font-size: 1.4em;
+                font-style: italic;
+                
+            }
+            strong{
+                color: white;
+            }
+            
+        }
+        
     }
 }
 .container-lista{
@@ -51,9 +66,7 @@
                 }
             }
             
-            &:hover >span > img{
-                    transform: rotate(90deg);
-            }
+            
             
         }
         .sublista{
@@ -83,6 +96,13 @@
             }
             
         }
+        &:hover > .links-lista-p > span{
+            img{
+
+                transform: rotate(90deg);
+                transition: 0.3s;
+            }
+        }
         &:hover > .sublista {
 
             
@@ -107,6 +127,8 @@
     }
     
 }
+
+
 
 }
 
