--- a/scss/mundo/quadrantes.scss
+++ b/scss/mundo/quadrantes.scss
@@ -3,6 +3,7 @@
     font-family:"Raleway", Arial, Helvetica, sans-serif;
 
     h1{
+        padding-bottom: 16px;
         font-family: "Quintessential", sans-serif;
     }
     p{
@@ -56,6 +57,7 @@
     
     }
     .card{
+        margin-top: 60px;
         color: white;
         background-color: rgba(0, 0, 0, 0.336);
         .card-header{
