--- a/scss/personagens/personagens.scss
+++ b/scss/personagens/personagens.scss
@@ -1,27 +1,80 @@
-
-.personagens{
+.slider-personagens{
+    margin: 0 auto;
+    width: 100%;
+    height: auto;
     
-    .box-personagens{
+    
+    .slider-content{
+        width: 100%;
+        height: auto;
         position: relative;
-        display: flex;
-        overflow: hidden;
-        width: 100%; /* ou um valor específico */
-        text-align: center;
         
-    
-    
-    .itens-personagens{
-        overflow: hidden;
-        flex: 0 0 auto;
-        transform-style: preserve-3d;
-        user-select: none;
-        transition: 0.5s;
-        img{
-            height: 80%;
+        
+        input{
+            display: none;
+        }
+        .itens-personagens{
+            width: 100%;
+            height: auto;
+            position: absolute;
+            text-align: center;
+            opacity: 0;
+            transition:opacity 1s ease-in-out;
+            img{
+                width: 100%;
+                height: 85vh;
+                
+                position: absolute;
+                top: 0;
+                left: 0;
+
+            }
+        }
+        .nav-manual, .nav-auto{
+            position:absolute;
+            width: 100%;
+            margin-top: 34.5%;
+            object-fit: cover;
+            display: flex;
+            justify-content: center;
+            .a1{            
+                            width: 10px;
+            }
+            
+            .manual-btn, .a1{
+                border: 1px solid white;
+                padding: 10px;
+                border-radius: 50%;
+                transition: .3s;
+                cursor: pointer;
+                &:not(:last-child){
+                    margin-right: 5px;
+                }
+                &:hover{
+                    border: 1px solid rgb(245, 147, 1);
+                    background-color: wheat;
+                    scale: 1.2;
+
+                }
+            
+            }
         }
         
-        
+        .itens-personagens.ativo{
+            opacity: 1;
+        }
     }
 }
-}
 
+#radio-1:checked ~ .nav-auto .auto-btn1,
+#radio-2:checked ~ .nav-auto .auto-btn2,
+#radio-3:checked ~ .nav-auto .auto-btn3,
+#radio-4:checked ~ .nav-auto .auto-btn4,
+#radio-5:checked ~ .nav-auto .auto-btn5,
+#radio-6:checked ~ .nav-auto .auto-btn6,
+#radio-7:checked ~ .nav-auto .auto-btn7 {
+    background-color: wheat;
+    }
+    #radio-1:checked ~ .ativ {
+        margin-left: 0%;
+    }
