--- a/scss/personagens/personagens.scss
+++ b/scss/personagens/personagens.scss
@@ -1,12 +1,16 @@
+
 .slider-personagens{
-    margin: 0 auto;
+
+    margin: 16px auto;
     width: 100%;
-    height: auto;
+    display: flex;
+    justify-content: center;
+    align-items: center;
     
     
     .slider-content{
-        width: 100%;
-        height: auto;
+        height: 600px;
+        width: 90%;
         position: relative;
         
         
@@ -15,30 +19,28 @@
         }
         .itens-personagens{
             width: 100%;
-            height: auto;
+            height: 600px;
             position: absolute;
             text-align: center;
             opacity: 0;
             transition:opacity 1s ease-in-out;
             img{
-                width: 100%;
-                height: 85vh;
-                
-                position: absolute;
-                top: 0;
-                left: 0;
+                width: 90%;
+                height: 80%;
 
             }
         }
+        
         .nav-manual, .nav-auto{
-            position:absolute;
+            position: absolute;
+            z-index: 111;
             width: 100%;
             margin-top: 34.5%;
             object-fit: cover;
             display: flex;
             justify-content: center;
             .a1{            
-                            width: 10px;
+                width: 10px;
             }
             
             .manual-btn, .a1{
@@ -78,3 +80,79 @@
     #radio-1:checked ~ .ativ {
         margin-left: 0%;
     }
+
+.aba-dragoes{
+
+    color: aliceblue;
+    h3{
+        padding: 16px;
+        font-size: 3em;
+        font-style: italic;
+        font-family: "Quintessential", sans-serif;
+    }
+    .dragoes{
+        border-bottom: 1px solid white;
+        padding: 32px;
+        display: flex;
+    justify-content: space-around;
+    align-items: center;
+    img{
+        
+        border-bottom: 1px solid white;
+        width: 350px;
+        height: 300px;
+    }
+    .lado-direito{
+        border-right: 1px solid white;
+    }
+    .lado-esquedo{
+        border-left: 1px solid white;
+    }
+    .info-dragoes{
+        width: 60%;
+        table{
+    width: 100%;
+    border-collapse: collapse;
+            th{
+                padding: 6px;
+            }
+            td{
+                padding: 8px;
+            }
+}
+    }
+    }
+}
+
+
+table, th, td {
+    margin: auto;
+    color: white;
+    border: 1px solid black;
+    border-collapse: collapse;
+  }
+th{
+    padding: 8px;
+    border: 1px solid white;
+    text-align: center;
+}
+td{
+    padding: 8px;
+    border: 1px solid white;
+    text-align: center;
+}
+
+.mais-sobre-dragoes{
+    width: 1000px;
+    padding-top: 16px;
+    color: white;
+    h2{
+        font-family: "Quintessential", sans-serif;
+
+    }
+    p{
+        font-family:"Raleway", Arial, Helvetica, sans-serif; 
+        padding: 32px;
+        color: rgb(185, 164, 124);
+    }
+}
