--- a/css/main.css
+++ b/css/main.css
@@ -23,6 +23,19 @@ body {
 header {
   background-color: rgba(0, 0, 0, 0.199);
 }
+header .head .menu-hamburguer {
+  cursor: pointer;
+  width: 30px;
+  height: 20px;
+  display: none;
+}
+header .head .menu-hamburguer .linha-menu {
+  width: 100%;
+  height: 2px;
+  background-color: rgb(255, 255, 255);
+  margin: 5px;
+  transition: 0.5s;
+}
 header .head .menu .menu-lista {
   border-bottom: 2px solid rgba(255, 255, 255, 0.438);
   text-align: center;
@@ -46,6 +59,64 @@ header .head .menu .menu-lista .menu-links a {
   padding: 8px;
 }
 
+@media screen and (max-width: 768px) {
+  header {
+    background-color: rgba(0, 0, 0, 0.877);
+  }
+  header .head .menu-hamburguer {
+    display: block;
+    margin-right: 16px;
+  }
+  header .head .menu-hamburguer .linha-menu:nth-child(1) {
+    transform: translate(5px, 0px);
+  }
+  header .head .menu-hamburguer .linha-menu:nth-child(2) {
+    opacity: 1;
+    margin: 5px;
+  }
+  header .head .menu-hamburguer .linha-menu:nth-child(3) {
+    transform: translate(8px, 0px);
+  }
+  header .head .menu {
+    display: none;
+    width: 100%;
+  }
+  header .head .menu .menu-lista {
+    background-color: rgba(0, 0, 0, 0.877);
+    border: none;
+    text-align: center;
+  }
+  header .head .menu .menu-lista .menu-links {
+    padding: 16px;
+    display: block;
+  }
+  header .head .menu .menu-lista .menu-links:hover {
+    transition: 0.5s;
+    color: black;
+    background-color: rgb(182, 151, 125);
+  }
+  header .head .menu .menu-lista .menu-links:hover a {
+    transition: 0.3s;
+    font-weight: bold;
+    color: black;
+  }
+  header .head .menu.active {
+    display: block;
+    position: absolute;
+    top: 100px;
+    left: 0px;
+    z-index: 1;
+  }
+  header .menu-hamburguer.active .linha-menu:nth-child(1) {
+    transform: rotate(45deg) translate(5px, 2px);
+  }
+  header .menu-hamburguer.active .linha-menu:nth-child(2) {
+    opacity: 0;
+  }
+  header .menu-hamburguer.active .linha-menu:nth-child(3) {
+    transform: rotate(-45deg) translate(8px, -5px);
+  }
+}
 #home #fundo {
   height: 100%;
   max-height: 100vh;
@@ -135,6 +206,7 @@ header .head .menu .menu-lista .menu-links a {
 }
 
 .container-frases {
+  overflow: hidden;
   padding: 24px 0px;
   margin-bottom: 20px;
   position: relative;
@@ -178,6 +250,22 @@ header .head .menu .menu-lista .menu-links a {
   margin: 50px 0;
 }
 
+@media screen and (max-width: 768px) {
+  .livros {
+    max-width: 100vw;
+  }
+  .container-frases {
+    width: 250px;
+    height: 350px;
+  }
+  .container-frases .flip img {
+    width: 100%;
+    height: 100%;
+  }
+  .container-frases .flip .card-tras p {
+    width: 200px;
+  }
+}
 .box-perguntas {
   margin: 200px 0px;
   transform-style: preserve-3d;
@@ -259,6 +347,43 @@ header .head .menu .menu-lista .menu-links a {
   transform: rotate(180deg);
 }
 
+@media screen and (max-width: 768px) {
+  .box-perguntas {
+    perspective: 500px;
+  }
+  .box-perguntas .item-pergunta {
+    top: calc(50% - 225px);
+    left: calc(50% - 165px);
+  }
+  .box-perguntas .item-pergunta:nth-child(1) {
+    transform: translate3D(-140px, 0, 0) scale(0.5) rotateY(80deg);
+    z-index: 0;
+  }
+  .box-perguntas .item-pergunta:nth-child(2) {
+    transform: translate3D(-140px, 0, 0) scale(0.5) rotateY(80deg);
+    z-index: 1;
+  }
+  .box-perguntas .item-pergunta:nth-child(3) {
+    transform: translate3D(-140px, 0, 0) scale(0.5) rotateY(80deg);
+    z-index: 6;
+  }
+  .box-perguntas .item-pergunta:nth-child(4) {
+    transform: translate3D(50px, 0, 0) scale(1) rotateY(0deg);
+    z-index: 100;
+  }
+  .box-perguntas .item-pergunta:nth-child(5) {
+    transform: translate3D(150px, 0, 0) scale(0.6) rotateY(-80deg);
+    z-index: 5;
+  }
+  .box-perguntas .item-pergunta:nth-child(6) {
+    transform: translate3D(150px, 0, 0) scale(0.6) rotateY(-80deg);
+    z-index: 3;
+  }
+  .box-perguntas .item-pergunta:nth-child(7) {
+    transform: translate3D(150px, 0, 0) scale(0.6) rotateY(-80deg);
+    z-index: -1;
+  }
+}
 .fundo {
   height: 100%;
   max-height: 100vh;
@@ -597,22 +722,23 @@ header .head .menu .menu-lista .menu-links a {
   font-family: "Quintessential", sans-serif;
 }
 .aba-dragoes .dragoes {
-  border-bottom: 1px solid white;
+  border-bottom: 1px solid rgba(255, 255, 255, 0.158);
   padding: 32px;
   display: flex;
   justify-content: space-around;
   align-items: center;
 }
 .aba-dragoes .dragoes img {
-  border-bottom: 1px solid white;
+  filter: brightness(1.1);
+  border-bottom: 1px solid rgba(255, 255, 255, 0.521);
   width: 350px;
   height: 300px;
 }
 .aba-dragoes .dragoes .lado-direito {
-  border-right: 1px solid white;
+  border-right: 1px solid rgba(255, 255, 255, 0.527);
 }
 .aba-dragoes .dragoes .lado-esquedo {
-  border-left: 1px solid white;
+  border-left: 1px solid rgba(255, 255, 255, 0.521);
 }
 .aba-dragoes .dragoes .info-dragoes {
   width: 60%;
@@ -637,13 +763,13 @@ table, th, td {
 
 th {
   padding: 8px;
-  border: 1px solid white;
+  border: 1px solid rgba(172, 172, 172, 0.418);
   text-align: center;
 }
 
 td {
   padding: 8px;
-  border: 1px solid white;
+  border: 1px solid rgba(172, 172, 172, 0.418);
   text-align: center;
 }
 
