--- a/scss/home/card_frases.scss
+++ b/scss/home/card_frases.scss
@@ -1,4 +1,6 @@
+
 .container-frases{
+    overflow: hidden;
     padding: 24px 0px;
     margin-bottom: 20px;
     position: relative;
@@ -46,4 +48,30 @@
 }
 .s{
     margin: 50px 0;
+}
+
+@media screen and (max-width: 768px) {
+    .livros{
+        max-width: 100vw;
+        
+    }
+    .container-frases{
+        width: 250px;
+        height: 350px;
+        
+        .flip{
+
+            img{
+                width: 100%;
+                height: 100%;
+            }
+    
+            .card-tras{
+                
+                p{
+                    width: 200px;
+                }
+            }
+        }
+    }
 }
