--- a/scss/sinopse/sinopse.scss
+++ b/scss/sinopse/sinopse.scss
@@ -7,11 +7,13 @@
         font-family:Bonheur Royale,cursive,Arial, Helvetica, sans-serif ;
         font-size: 5em;
         text-align: center;
+        text-shadow: 0px 4px 4px black;
     }
     p{
         font-family: Raleway,Arial, Helvetica, sans-serif;
         font-size: 1.1em;
         text-align: justify;
+        text-shadow: 0px 4px 4px black;
     }
     a{
         
