--- a/scss/personagens/personagens.scss
+++ b/scss/personagens/personagens.scss
@@ -54,7 +54,7 @@
                 }
                 &:hover{
                     border: 1px solid rgb(245, 147, 1);
-                    background-color: wheat;
+                    background-color: rgb(179, 153, 108);
                     scale: 1.2;
 
                 }
@@ -75,7 +75,7 @@
 #radio-5:checked ~ .nav-auto .auto-btn5,
 #radio-6:checked ~ .nav-auto .auto-btn6,
 #radio-7:checked ~ .nav-auto .auto-btn7 {
-    background-color: wheat;
+    background-color: rgb(77, 77, 77);
     }
     #radio-1:checked ~ .ativ {
         margin-left: 0%;
@@ -154,5 +154,95 @@ td{
         font-family:"Raleway", Arial, Helvetica, sans-serif; 
         padding: 32px;
         color: rgb(185, 164, 124);
+    }
+}
+@media screen and (max-width: 768px){
+    .slider-personagens{
+        .slider-content{
+            .nav-manual, .nav-auto{
+                top: 250px;
+                .manual-btn, .a1{
+                    padding: 15px;
+                    &:not(:last-child){
+                        margin-right: 9px;
+                    }
+                }
+            }
+        }
+    }
+    
+    .aba-dragoes{
+        .dragoes{
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        img{
+            width: 300px;
+            height: 250px;
+        }
+        .lado-direito{
+            border-right: none;
+        }
+        .lado-esquedo{
+            border-left: none;
+        }
+        .info-dragoes{
+            
+            table{
+                
+                width: 300px;
+                margin-top: 16px;
+                margin-bottom: 16px;
+                margin-left: -50px;
+                height: 600px;
+                tbody{
+                    display: flex;
+                    align-items: center;
+                    justify-content: space-evenly;
+                    tr{
+            display: flex;
+            flex-direction: column;
+            width: 100%;
+            height: 700px;
+            th{
+                    padding: 0px;
+                    height: 600px ;
+                }
+                td{
+                    height: 600px;
+                    padding: 8px;
+                }
+        }
+                }
+        
+                
+                
+    }
+        }
+        }
+    }
+    
+    
+    th{
+        width: 100%;
+        height: 100%;
+        padding: 8px;
+    }
+    td{
+        width: 100%;
+        height: 100%;
+        padding: 8px;
+        border: 1px solid rgba(172, 172, 172, 0.418);
+        text-align: center;
+    }
+    
+    .mais-sobre-dragoes{
+        max-width: 1000px;
+        width: 90%;
+        padding-top: 16px;
+        color: white;
+        p{
+            padding: 32px;
+        }
     }
 }
